Update project keep

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ PerfectSelfBackend/PerfectSelf.Backend/obj/
 PerfectSelfBackend/PerfectSelf.Backend/bin/
 PerfectSelfBackend/packages/
 PerfectSelfBackend/PerfectSelf.Core/obj/
+PerfectSelfBackend/PerfectSelf.Core/bin/
+PerfectSelfBackend/PerfectSelf.WebAPI/bin/
