--- a/PerfectSelfBackend/PerfectSelf.WebAPI/appsettings.json
+++ b/PerfectSelfBackend/PerfectSelf.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PerfectSelfConnect": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Workstation\\Kayan\\PerfectSelfBackendGit\\PerfectSelfBackend\\PerfectSelf.WebAPI\\Db\\PerfectSelf.mdf;Integrated Security=True;Connect Timeout=30" 
+  }
 }
