--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ PerfectSelfBackend/packages/
 PerfectSelfBackend/PerfectSelf.Core/obj/
 PerfectSelfBackend/PerfectSelf.Core/bin/
 PerfectSelfBackend/PerfectSelf.WebAPI/bin/
+PerfectSelfBackend/PerfectSelf.WebAPI/Db/
