--- a/PerfectSelfBackend/PerfectSelf.WebAPI/appsettings.json
+++ b/PerfectSelfBackend/PerfectSelf.WebAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PerfectSelfConnect": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Workstation\\Kayan\\PerfectSelfBackendGit\\PerfectSelfBackend\\PerfectSelf.WebAPI\\Db\\PerfectSelf.mdf;Integrated Security=True;Connect Timeout=30" 
+    "PerfectSelfConnect": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Workstation\\Kayan\\PerfectSelfBackendGit\\PerfectSelfBackend\\PerfectSelf.WebAPI\\Db\\PerfectSelf.mdf;Integrated Security=True;Connect Timeout=30"
+    //"PerfectSelfConnect": "Data Source=18.119.1.15;Initial Catalog=perfectself;Persist Security Info=True;User ID=sa;Password=1234%^&*qwerTYUI;Connect Timeout=30"
   }
 }
