--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ PerfectSelfBackend/PerfectSelf.Core/obj/
 PerfectSelfBackend/PerfectSelf.Core/bin/
 PerfectSelfBackend/PerfectSelf.WebAPI/bin/
 PerfectSelfBackend/PerfectSelf.WebAPI/Db/
+PerfectSelfBackend/.vs/PerfectSelfBackend/v17/.suo
