--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ PerfectSelfBackend/PerfectSelf.Core/bin/
 PerfectSelfBackend/PerfectSelf.WebAPI/bin/
 PerfectSelfBackend/PerfectSelf.WebAPI/Db/
 PerfectSelfBackend/.vs/PerfectSelfBackend/v17/.suo
+PerfectSelfBackend/.vs/PerfectSelfBackend/DesignTimeBuild/.dtbcache.v2
