--- a/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
+++ b/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+    <PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
