--- a/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
+++ b/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.58" />
     <PackageReference Include="CorePush" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
