--- a/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
+++ b/PerfectSelfBackend/PerfectSelf.WebAPI/PerfectSelf.WebAPI.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.58" />
     <PackageReference Include="CorePush" Version="3.1.1" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14">
